--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ async-timeout==4.0.3
 asyncpg==0.29.0
 attrs==23.2.0
 certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
 exceptiongroup==1.2.0
 frozenlist==1.4.1
@@ -23,10 +24,12 @@ multidict==6.0.5
 pydantic==2.5.3
 pydantic_core==2.14.6
 Pygments==2.17.2
+requests==2.31.0
 rich==13.7.1
 shellingham==1.5.4
 sniffio==1.3.1
 SQLAlchemy==2.0.29
 typer==0.12.3
 typing_extensions==4.11.0
+urllib3==2.2.1
 yarl==1.9.4
