--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,10 @@ attrs==23.2.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+dlib==19.24.4
 exceptiongroup==1.2.0
+face-recognition==1.3.0
+face-recognition-models==0.3.0
 frozenlist==1.4.1
 greenlet==3.0.3
 h11==0.14.0
@@ -21,6 +24,9 @@ magic-filter==1.0.12
 markdown-it-py==3.0.0
 mdurl==0.1.2
 multidict==6.0.5
+names==0.3.0
+numpy==1.26.4
+pillow==10.3.0
 pydantic==2.5.3
 pydantic_core==2.14.6
 Pygments==2.17.2
